--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,42 @@ layout: default
 title: Заречье | Главная
 ---
 
-Hello!
+<!-- hero section -->
+<section class="hero" id="hero">
+
+   <div class="swiper hero-slider">
+
+      <div class="swiper-wrapper">
+
+         <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
+            <div class="content">
+               <p>ваши идеальные выходные</p>
+               <p>Уединение с природой вдали
+                  от городской суеты</p>
+            </div>
+         </div>
+
+         <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
+            <div class="content">
+               <p>2 ваши идеальные выходные</p>
+               <p>2 Уединение с природой вдали
+                  от городской суеты</p>
+            </div>
+         </div>
+
+         <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
+            <div class="content">
+               <p>3 ваши идеальные выходные</p>
+               <p>3 Уединение с природой вдали
+                  от городской суеты</p>
+            </div>
+         </div>
+
+
+      </div>
+
+      <div class="swiper-pagination"></div>
+
+   </div>
+
+</section>
