--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ title: Заречье | Главная
 
          <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
             <div class="content">
-               <p>ваши идеальные выходные</p>
+               <h3>ваши идеальные выходные</h3>
                <p>Уединение с природой вдали
                   от городской суеты</p>
             </div>
@@ -20,7 +20,7 @@ title: Заречье | Главная
 
          <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
             <div class="content">
-               <p>2 ваши идеальные выходные</p>
+               <h3>2 ваши идеальные выходные</h3>
                <p>2 Уединение с природой вдали
                   от городской суеты</p>
             </div>
@@ -28,7 +28,7 @@ title: Заречье | Главная
 
          <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
             <div class="content">
-               <p>3 ваши идеальные выходные</p>
+               <h3>3 ваши идеальные выходные</h3>
                <p>3 Уединение с природой вдали
                   от городской суеты</p>
             </div>
