--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ title: Заречье | Главная
 ---
 
 <!-- hero section -->
-<section class="hero" id="hero">
+ <section class="hero" id="hero">
 
    <div class="swiper hero-slider">
 
@@ -12,24 +12,24 @@ title: Заречье | Главная
 
          <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
             <div class="content">
-               <h3>ваши идеальные выходные</h3>
-               <p>Уединение с природой вдали
+               <p class="hero-title">ваши идеальные выходные</p>
+               <p class="hero-text">Уединение с природой вдали <br>
                   от городской суеты</p>
             </div>
          </div>
 
          <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
             <div class="content">
-               <h3>2 ваши идеальные выходные</h3>
-               <p>2 Уединение с природой вдали
+               <p class="hero-title">2 ваши идеальные выходные</з>
+               <p class="hero-text">2 Уединение с природой вдали <br>
                   от городской суеты</p>
             </div>
          </div>
 
          <div class="swiper-slide box" style="background: url(assets/images/black-bg.jpg);">
             <div class="content">
-               <h3>3 ваши идеальные выходные</h3>
-               <p>3 Уединение с природой вдали
+               <p class="hero-title">3 ваши идеальные выходные</p>
+               <p class="hero-text">3 Уединение с природой вдали <br>
                   от городской суеты</p>
             </div>
          </div>
@@ -41,4 +41,6 @@ title: Заречье | Главная
 
    </div>
 
-</section>
+</section> 
+
+
