start search room

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Заречье | Главная
 ---
 
-<!-- hero section -->
+<!-- hero -->
  <section class="hero" id="hero">
 
    <div class="swiper hero-slider">
@@ -42,5 +42,17 @@ title: Заречье | Главная
    </div>
 
 </section> 
+
+<!-- search room  -->
+<div class="search-room">
+   <div class="search-room__card">
+      <div class="search-room__top">
+         
+      </div>
+      <div class="search-room__bottom">
+         <a href="#" class="btn--accent">НАЙТИ НОМЕР</a>
+      </div>
+   </div>
+</div>
 
 
