--- a/src/index.html
+++ b/src/index.html
@@ -75,3 +75,31 @@ title: Заречье | Главная
    </form>
 </div>
 
+<!-- SALE BANNER -->
+<div class="img-height-bg" >
+   <div class="container">
+
+     <div class="content">
+       <h3 class="heading">день рождение в заречье</h3>
+       <div class="sale-content">
+         <div class="sale-box">
+            <p>15%</p>
+            <div class="sale-box-text">
+               <span>скидка</span>
+               <p>На проживание в коттедже</p>
+            </div>
+         </div>
+
+         <div class="sale-box">
+            <p>10%</p>
+            <div class="sale-box-text">
+               <span>скидка</span>
+               <p>На проживание в коттедже</p>
+            </div>
+         </div>
+       </div>
+       <a href="#" class="btn--accent">СВЯЗАТЬСЯ С НАМИ</a>
+     </div>
+
+   </div>
+ </div>
