--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@ title: Заречье | Главная
 </section> 
 
 <!-- search room  -->
-
+<div class="search-room">
 <div class="container">
 
    <form>
@@ -74,16 +74,16 @@ title: Заречье | Главная
       </div>
    </form>
 </div>
-
+</div>
 <!-- SALE BANNER -->
-<div class="img-height-bg" >
+<section class="img-height-bg" >
    <div class="container">
 
      <div class="content">
-       <h3 class="heading">день рождение в заречье</h3>
+       <h3 class="heading-white">день рождение в заречье</h3>
        <div class="sale-content">
          <div class="sale-box">
-            <p>15%</p>
+            <p class="sale-box-sale">15%</p>
             <div class="sale-box-text">
                <span>скидка</span>
                <p>На проживание в коттедже</p>
@@ -91,7 +91,7 @@ title: Заречье | Главная
          </div>
 
          <div class="sale-box">
-            <p>10%</p>
+            <p class="sale-box-sale">10%</p>
             <div class="sale-box-text">
                <span>скидка</span>
                <p>На проживание в коттедже</p>
@@ -102,4 +102,42 @@ title: Заречье | Главная
      </div>
 
    </div>
- </div>
+ </section>
+
+ <!-- WE OFFER -->
+ <section class="offer">
+   <h2 class="heading">мы предлагаем</h2>
+
+   <div class="offer__container container swiper-container">
+      <div class="swiper-wrapper">
+         <!--==================== OFFER 1 ====================-->
+         <div class="offer__card swiper-slide">
+            <span class="offer__price">от 20 000₸</span>
+            <img src="assets/images/offer-1.jpg" alt="" class="offer__img">
+            <h2 class="offer__title">проживание</h2>
+            <span class="offer__description">Проживание в коттеджах с лучшими условиями для вас</span>
+         </div>
+
+         <!--==================== OFFER 2 ====================-->
+         <div class="offer__card swiper-slide">
+            <span class="offer__price">от 20 000₸</span>
+            <img src="assets/images/offer-2.jpg" alt="" class="offer__img">
+            <h2 class="offer__title">проживание</h2>
+            <span class="offer__description">Проживание в коттеджах с лучшими условиями для вас</span>
+         </div>
+
+         <!--==================== OFFER 3 ====================-->
+         <div class="offer__card swiper-slide">
+            <span class="offer__price">от 20 000₸</span>
+            <img src="assets/images/offer-3.jpg" alt="" class="offer__img">
+            <h2 class="offer__title">проживание</h2>
+            <span class="offer__description">Проживание в коттеджах с лучшими условиями для вас</span>
+         </div>
+
+ 
+
+      </div>
+   </div>
+</section>
+
+
